--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.8",
     "@react-native-async-storage/async-storage": "^1.15.15",
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@types/lodash": "^4.14.178",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-material-ui": "^1.30.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native-vector-icons": "^9.0.0",
+    "zustand": "^3.6.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
